# SAT-fuzzer

./: CMakeLists.txt  README.md  build.sh  func.hpp  fuzz-sat  fuzzer.cpp
inputs/: a.cnf
logs/: error_log.txt
solvers/: README.md
solvers/solver1/: runsat.sh  sat
solvers/solver2/: sat
solvers/solver3/: sat
src/: func.cpp  ub.cpp  ub.hpp  util.cpp  util.hpp
src/core/: func.cpp  func.hpp
src/fuzz/: fuzzer.cpp
src/ub/: ub.cpp  ub.hpp
src/util/: util.cpp  util.hpp
tests/: test_func.cpp  test_fuzzer.cpp  test_util.cpp
